--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -3,51 +3,172 @@
   flex-direction: column;
   text-align: center;
 }
-.imgTitulo {
-  margin: 100px;
-}
 .imgTitulo img {
   transform-style: preserve-3d;
-  animation: rotar 8s linear infinite;
-}
-.home .imgTitulo {
-  transform-style: preserve-3d;
-  animation: rotar 8s linear infinite;
-  transform: rotateY(calc((var(--position) - 1)));
+  animation: rotar 12s linear infinite;
+  width: 600px;
+  height: 450px;
 }
 @keyframes rotar {
-  from {
-    transform: rotateY(180deg);
+  0% {
+    transform: rotateY(0deg);
   }
-  to {
-    transform: rotateY(-180deg);
+  50% {
+    transform: rotateY(360deg);
+  }
+  50.01% {
+    transform: rotateX(0deg);
+  }
+  100% {
+    transform: rotateX(360deg);
   }
 }
-.slider-container {
-  margin: 0 auto;
-  overflow-x: hidden;
-  height: 100vh;
+.containerSlider {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 .slider {
   display: flex;
-  cursor: grab;
-  overflow-x: visible;
+  position: relative;
+  width: 1050px; /* 3 * 350px */
+  height: 750px;
+  overflow: hidden;
 }
-.item {
-  min-height: 650px;
-  min-width: 450px;
-  padding: 30px;
-  transition: transform 0.3s ease;
+.slide {
+  position: absolute;
+  width: 450px;
+  height: 600px;
+  transition: transform 0.5s ease, opacity 0.5s ease;
+  opacity: 0;
+}
+.slide img {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+}
+.slide.active {
+  left: 315px; /* Center position */
+  transform: translateX(0) scale(1);
+  opacity: 1;
+  z-index: 2;
+}
+.slide.next {
+  left: 685px; /* Right position */
+  transform: translateX(0) rotateY(-30deg) scale(0.7);
+  opacity: 0.5;
+  z-index: 1;
 }
 
-.item img {
-  height: 100%;
-  width: 100%;
-  pointer-events: none;
-  border-radius: 5px;
-  transition: border-radius 0.5s ease;
+.slide.prev {
+  left: -55px; /* Left position */
+  transform: translateX(0) rotateY(30deg) scale(0.7);
+  opacity: 0.5;
+  z-index: 1;
+}
+.buttonAnterior,
+.buttonSiguiente {
+  color: black;
+  position: relative;
+  bottom: 100px;
+  right: -15px;
+  padding: 10px;
+  background-color: white;
+  border-radius: 15px;
+}
+.nextIcon {
+  width: 25px; /* Ajusta el ancho según sea necesario */
+  height: 25px; /* Ajusta la altura según sea necesario */
+}
+.prevIcon {
+  width: 30px; /* Ajusta el ancho según sea necesario */
+  height: 30px; /* Ajusta la altura según sea necesario */
+}
+.buttonAnterior:hover,
+.buttonSiguiente:hover {
+  transform: scale(1.2);
+  transition: transform 0.3s ease-in-out;
+}
+@media (max-width: 1024px) {
+  .slide {
+    width: 450px;
+    height: 600px;
+  }
+  .slide.active {
+    left: 220px; /* Center position */
+    transform: translateX(0) scale(1);
+  }
+  .slide.next {
+    left: 550px; /* Right position */
+    transform: translateX(0) scale(0.5);
+  }
+  .slide.prev {
+    left: -110px; /* Left position */
+    transform: translateX(0) scale(0.5);
+  }
+  .buttonAnterior,
+  .buttonSiguiente {
+    bottom: 150px;
+    right: 0px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+}
+@media (max-width: 768px) {
+  .imgTitulo img {
+    width: 550px;
+    height: 400px;
+  }
+  .slide {
+    width: 350px;
+    height: 500px;
+  }
+  .slide.active {
+    left: 140px; /* Center position */
+    transform: translateX(0) scale(1);
+  }
+  .slide.next {
+    left: 355px; /* Right position */
+    transform: translateX(0) rotateY(30deg) scale(0.6);
+  }
+  .slide.prev {
+    left: -75px;
+    transform: translateX(0) rotateY(30deg) scale(0.6);
+  }
+  .buttonAnterior,
+  .buttonSiguiente {
+    bottom: 150px;
+  }
+}
+@media (max-width: 480px) {
+  .imgTitulo img {
+    width: 350px;
+    height: 200px;
+  }
+  .slide {
+    width: 350px;
+    height: 500px;
+  }
+  .slide.active {
+    left: 15px; /* Center position */
+    transform: translateX(0) scale(1);
+  }
+  .slide.next,
+  .slide.prev {
+    opacity: 0;
+    pointer-events: none;
+  }
+  .buttonAnterior,
+  .buttonSiguiente {
+    bottom: 150px;
+    padding: 7px;
+  }
+  .nextIcon {
+    width: 15px;
+    height: 15px;
+  }
+  .prevIcon {
+    width: 15px;
+    height: 15px;
+  }
 }
