--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,8 @@
 }
 #root {
   overflow-x: hidden;
-  background-color: black;
+  background-image: url("../src/assets/fotos/fondoFranK.jpg");
+  background-size: cover; /* Ajusta la imagen para que cubra todo el contenedor */
+  background-position: center; /* Centra la imagen en el contenedor */
+  background-repeat: no-repeat; /* Evita que la imagen se repita */
 }
