--- a/src/footer/Final.css
+++ b/src/footer/Final.css
@@ -1,4 +1,4 @@
-.containerFooter {
+.containerFinal {
   margin-top: 70px;
 }
 .spotify {
@@ -32,6 +32,10 @@
   align-items: center;
   justify-content: center;
   list-style-type: none;
+  transition: transform 0.3s ease-in-out;
+}
+.albums:hover {
+  transform: scale(1.1);
 }
 .disco,
 .sencillo {
@@ -46,10 +50,8 @@
 .signoMusical {
   animation: rotacion 5s linear infinite;
   margin-right: 50px;
-  text-align: center;
   height: 150px;
   width: 150px;
-  text-align: center;
   margin-bottom: 30px;
 }
 @keyframes rotacion {
@@ -164,6 +166,10 @@
 }
 .icon {
   margin: 10px;
+  transition: transform 0.3s ease-in-out;
+}
+.icon:hover {
+  transform: scale(1.1);
 }
 @keyframes balanceo {
   0% {
@@ -233,7 +239,7 @@
   }
   .tapaDeAlbum {
     right: 255px;
-    bottom: 24px;
+    bottom: 54px;
     height: 50px;
     width: 50px;
   }
